# ohos_mars_xlog

./: .gitignore  README.md  build-profile.json5  deploy.sh
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/rawfile/: log.txt
xlog/: CHANGELOG.md  Index.ets  LICENSE  README.md  build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
xlog/example/: usage.md
xlog/src/main/: module.json5
xlog/src/main/cpp/: CMakeLists.txt  mars  napi_init.cpp
xlog/src/main/cpp/types/libmarsxlog/: index.d.ts  oh-package.json5
xlog/src/main/ets/: ILogInstance.ets  LogConfig.ets  LoggerManager.ets  Types.ets  XLog.ets  XLogBuilder.ets
xlog/src/main/ets/client/: ILoggerClient.ets
xlog/src/main/ets/client/impl/: HiLogClient.ets  XLogClient.ets
xlog/src/ohosTest/: module.json5
